--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+report.pdf
+report.tex
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -39,5 +42,3 @@
 *.synctex.gz
 *.synctex.gz(busy)
 *.pdfsync
-
-report.pdf
